# pythonanywhere-clis

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-docs.txt
docs/: feature-list.md  issues.md  prd-mvp.md  tech-selection.md
documentation/: conf.py  index.rst
documentation/commands/: index.md
documentation/en/: architecture.md  getting-started.md
documentation/en/commands/: account.md  (+9 more)
documentation/zh/: architecture.md  getting-started.md
pa_cli/: config.py  exceptions.py
pa_cli/api/: always_on.py  client.py  databases.py  files.py  system.py  tasks.py  webapps.py
pa_cli/cli/: account_cmd.py  always_on_cmd.py  consoles_cmd.py  databases_cmd.py  deploy_cmd.py  files_cmd.py  init_cmd.py  main.py  register_cmd.py  status_cmd.py  tasks_cmd.py  utils.py  webapps_cmd.py
pa_cli/crawler/: account_crawler.py  console_crawler.py
pa_cli/workflows/: deploy.py
pythonanywheres-skill/: SKILL.md
pythonanywheres-skill/evals/: evals.json
pythonanywheres-skill/references/: commands.md  workflows.md
tests/: test_account_crawler.py  test_config.py  test_console_crawler.py
tests/api/: test_always_on.py  test_client.py  test_consoles.py  test_databases.py  test_files.py  test_system.py  test_tasks.py  test_webapps.py
tests/cli/: test_account_cmd.py  test_always_on_cmd.py  test_consoles_cmd.py  test_databases_cmd.py  test_deploy_cmd.py  test_files_cmd.py  test_init_cmd.py  test_register_cmd.py  test_status_cmd.py  test_tasks_cmd.py  test_webapps_cmd.py
tests/workflows/: test_deploy.py
(+10 files in other folders)
